objects/LLC_BI__Beneficiary__c.object
<CustomObject>
    <description>Product beneficiaries.</description>
    <fields>
        <fullName>LLC_BI__Account_Owner_Related_to_Beneficiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Account Owner</description>
        <inlineHelpText>This indicates the account owner related to this beneficiary.</inlineHelpText>
        <label>Account Owner Related to Beneficiary</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Beneficiaries</relationshipLabel>
        <relationshipName>Beneficiaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This identifies if the beneficiary is an individual or an entity.</description>
        <inlineHelpText>This identifies if the beneficiary is an individual or an entity.</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Alternate_Signature_Description__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It provides a description of the alternate text to print under a signature line for the beneficiary. This is used if something other than the beneficiary&apos;s name should be printed under their signature line.</description>
        <inlineHelpText>A description of the alternate text to print under a signature line for the beneficiary. This would be used if something other than the beneficiary&apos;s name should print under their signature line.</inlineHelpText>
        <label>Alternate Signature Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Birthdate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It indicates the beneficiary&apos;s birthdate.</description>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__City__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the city of the mailing address of the beneficiary.</description>
        <inlineHelpText>The city of the mailing address of the beneficiary.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically set during New Customer Onboarding if a beneficiary has been added. This field indicates the deposit record that the beneficiary is related to.</description>
        <label>Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Beneficiaries</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Designated_Beneficiary_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, the individual beneficiary is considered a &quot;designated beneficiary&quot; for election purposes.</description>
        <inlineHelpText>If true the individual beneficiary is considered a &apos;designated beneficiary&apos; for election purposes.</inlineHelpText>
        <label>Designated Beneficiary Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Entity_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the entity type of the IRA beneficiary.</description>
        <inlineHelpText>Specifies the entity type of the IRA beneficiary.</inlineHelpText>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Cooperative</fullName>
                </value>
                <value>
                    <fullName>Estate</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Financial Institution</fullName>
                </value>
                <value>
                    <fullName>Domestic Government Unit</fullName>
                </value>
                <value>
                    <fullName>Foreign Government Unit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__First_Name__c</fullName>
        <description>The user populates this optional text field to capture the beneficiary&apos;s first name. By default, it is blank.</description>
        <inlineHelpText>Enter the beneficiary&apos;s first name in this field.</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Name__c</fullName>
        <description>The user populates this optional text field to capture the beneficiary&apos;s last name. By default, it is blank.</description>
        <inlineHelpText>Enter the beneficiary&apos;s last name in this field.</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Middle_Name__c</fullName>
        <description>The user populates this optional text field to capture the beneficiary&apos;s middle name. By default, it is blank.</description>
        <inlineHelpText>Enter the beneficiary&apos;s middle name in this field.</inlineHelpText>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Percentage__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This field captures ownership percentage for this beneficiary.</description>
        <label>Ownership Percentage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Party_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies whether the IRA plan beneficiary is an individual or an entity.</description>
        <inlineHelpText>Specifies whether the IRA plan beneficiary is an individual or an entity.</inlineHelpText>
        <label>Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Postal_Code__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the postal code of the mailing address of the beneficiary.</description>
        <inlineHelpText>The postal code of the mailing address of the beneficiary.</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_To_Owner__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It includes a description of the beneficiary&apos;s relationship to the IRA/HSA owner.</description>
        <inlineHelpText>A description of the beneficiaries relationship to the IRA/HSA owner.</inlineHelpText>
        <label>Relationship to Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the entity type of the beneficiary.</description>
        <inlineHelpText>Specifies the entity type of the beneficiary.</inlineHelpText>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Cooperative</fullName>
                </value>
                <value>
                    <fullName>Estate</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Financial Institution</fullName>
                </value>
                <value>
                    <fullName>Domestic Government Unit</fullName>
                </value>
                <value>
                    <fullName>Foreign Government Unit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Spouse_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, the beneficiary is the spouse of the IRA owner.</description>
        <inlineHelpText>If true the beneficiary is the spouse of the IRA owner.</inlineHelpText>
        <label>Spouse Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spouse_Name__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the name of the beneficiary&apos;s spouse.</description>
        <inlineHelpText>The name of the beneficiary&apos;s spouse.</inlineHelpText>
        <label>Spouse Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It indicates the state of the mailing address of the beneficiary.</description>
        <inlineHelpText>The state of the mailing address of the beneficiary.</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Street_Address_Other__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. The second line of the mailing street address of the beneficiary.</description>
        <inlineHelpText>The second line of the mailing street address of the beneficiary.</inlineHelpText>
        <label>Street Address Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Street_Address__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It indicates the first line of the mailing street address of the beneficiary.</description>
        <inlineHelpText>The first line of the mailing street address of the beneficiary.</inlineHelpText>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Suffix__c</fullName>
        <description>The user populates this optional text field to capture the beneficiary&apos;s suffix. By default, it is blank.</description>
        <inlineHelpText>Enter the beneficiary&apos;s suffix in this field.</inlineHelpText>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tax_Identification_Number_PE__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. The beneficiary&apos;s tax identification number. The field is only used when Platform Encryption is enabled.</description>
        <label>Tax Identification Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tax_Identification_Number__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. The beneficiary&apos;s tax identification number. The field should not be used if Platform Encryption is enabled.</description>
        <label>Tax Identification Number</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. Specifies the type of beneficiary.</description>
        <inlineHelpText>Specifies the type of beneficiary.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Contingent Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Primary Successor Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Contingent Successor Beneficiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Beneficiary</label>
    <nameField>
        <label>Beneficiary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>